[package]
name = "rgmr"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/czxieddan/RGMR"

[build-dependencies]
embed-resource = "3"

[dependencies]
eframe = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
directories = "5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "webp"] }
arboard = "3"
rfd = "0.14"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
webbrowser = "1"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5"
